k8s-manifest/apps/user-service-client-test/user-service-client-test-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-client-test
  labels:
    app: user-service-client-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service-client-test
  template:
    metadata:
      labels:
        app: user-service-client-test
    spec:
      containers:
        - name: user-service-client-test
          image: akjamie/bookstore-user-service-client-test:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 256Mi
          readinessProbe:
            httpGet:
              port: 8080
              path: /user-service-client-test/actuator/health
            failureThreshold: 5
            successThreshold: 3
            initialDelaySeconds: 90
            periodSeconds: 10
          volumeMounts:
            - mountPath: "/etc/keystore"
              name: jwt-rsa-keystore
              readOnly: true
      volumes:
        - name: jwt-rsa-keystore
          secret:
            secretName: jwt-rsa
            items:
              - key: rsa.pem
                path: rsa.pem
