k8s-manifest/apps/user-service-client-test/user-service-client-test-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: user-service-client-test
  name: user-service-client-test
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: user-service-client-test
  type: ClusterIP
